# command-fds

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: minimal.rs  spawn.rs
src/: inherited.rs  lib.rs  main.rs  mapping.rs  tokio.rs
